add checkin with detail page